--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>PentathlonScore – Live Results</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root {
-      color-scheme: light dark;
-    }
+    :root { color-scheme: light dark; }
+
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       margin: 0;
@@ -47,9 +46,7 @@
       border-radius: 4px;
     }
 
-    .nav-link:hover {
-      background: #1f2937;
-    }
+    .nav-link:hover { background: #1f2937; }
 
     .nav-link.active {
       background: #4f46e5;
@@ -70,20 +67,8 @@
       margin-bottom: 16px;
     }
 
-    h1 {
-      font-size: 1.4rem;
-      margin: 0 0 4px;
-    }
-
-    h2 {
-      font-size: 1.1rem;
-      margin: 0 0 4px;
-    }
-
-    h3 {
-      font-size: 1rem;
-      margin: 0 0 4px;
-    }
+    h1 { font-size: 1.4rem; margin: 0 0 4px; }
+    h2 { font-size: 1.1rem; margin: 0 0 4px; }
 
     p {
       margin: 4px 0;
@@ -91,10 +76,7 @@
       color: #4b5563;
     }
 
-    .note {
-      font-size: 0.85rem;
-      color: #6b7280;
-    }
+    .note { font-size: 0.85rem; color: #6b7280; }
 
     label {
       display: block;
@@ -118,24 +100,11 @@
       box-shadow: 0 0 0 1px #6366f1;
     }
 
-    .message {
-      font-size: 0.85rem;
-      margin-top: 6px;
-    }
+    .message { font-size: 0.85rem; margin-top: 6px; }
+    .message.error { color: #b91c1c; }
+    .message.info { color: #6b7280; }
 
-    .message.error {
-      color: #b91c1c;
-    }
-
-    .message.info {
-      color: #6b7280;
-    }
-
-    .comp-meta {
-      font-size: 0.85rem;
-      color: #4b5563;
-      margin-top: 6px;
-    }
+    .comp-meta { font-size: 0.85rem; color: #4b5563; margin-top: 6px; }
 
     .pill {
       display: inline-block;
@@ -147,15 +116,8 @@
       margin-right: 4px;
     }
 
-    .pill.status-live {
-      background: #dcfce7;
-      color: #166534;
-    }
-
-    .pill.status-finished {
-      background: #fee2e2;
-      color: #991b1b;
-    }
+    .pill.status-live { background: #dcfce7; color: #166534; }
+    .pill.status-finished { background: #fee2e2; color: #991b1b; }
 
     .division-jump-container {
       display: flex;
@@ -175,9 +137,7 @@
       color: #111827;
     }
 
-    .division-jump-btn:hover {
-      background: #e5e7eb;
-    }
+    .division-jump-btn:hover { background: #e5e7eb; }
 
     .print-btn {
       margin-top: 8px;
@@ -190,14 +150,8 @@
       cursor: pointer;
     }
 
-    .print-btn:disabled {
-      opacity: 0.5;
-      cursor: default;
-    }
-
-    .print-btn:not(:disabled):hover {
-      background: #4338ca;
-    }
+    .print-btn:disabled { opacity: 0.5; cursor: default; }
+    .print-btn:not(:disabled):hover { background: #4338ca; }
 
     .division-header {
       display: flex;
@@ -207,10 +161,7 @@
       margin-bottom: 4px;
     }
 
-    .division-tags {
-      font-size: 0.8rem;
-      color: #6b7280;
-    }
+    .division-tags { font-size: 0.8rem; color: #6b7280; }
 
     table {
       width: 100%;
@@ -232,19 +183,10 @@
       text-align: right;
     }
 
-    th:first-child,
-    td:first-child {
-      text-align: center;
-    }
+    th:first-child, td:first-child { text-align: center; }
+    th:nth-child(2), td:nth-child(2) { text-align: left; }
 
-    th:nth-child(2),
-    td:nth-child(2) {
-      text-align: left;
-    }
-
-    tr:nth-child(even) td {
-      background: #f9fafb;
-    }
+    tr:nth-child(even) td { background: #f9fafb; }
 
     .rank-cell {
       text-align: center;
@@ -260,59 +202,31 @@
       white-space: nowrap;
     }
 
-    .noc-cell {
-      font-size: 0.8rem;
-      color: #6b7280;
-    }
+    .noc-cell { font-size: 0.8rem; color: #6b7280; }
 
     .disc-cell {
       font-size: 0.8rem;
       font-variant-numeric: tabular-nums;
     }
 
-    .handicap-cell {
-      font-variant-numeric: tabular-nums;
-    }
+    .handicap-cell { font-variant-numeric: tabular-nums; }
 
     @media (max-width: 640px) {
-      th, td {
-        padding: 4px 6px;
-        font-size: 0.8rem;
-      }
-      .division-header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .name-cell {
-        max-width: 150px;
-      }
+      th, td { padding: 4px 6px; font-size: 0.8rem; }
+      .division-header { flex-direction: column; align-items: flex-start; }
+      .name-cell { max-width: 150px; }
     }
 
-    /* Print styles */
     @media print {
-      header {
-        display: none;
-      }
-      body {
-        background: #ffffff;
-      }
-      main {
-        max-width: none;
-        margin: 0;
-        padding: 0;
-      }
-      .card {
-        box-shadow: none;
-        border-radius: 0;
-        margin: 0 0 8px;
-      }
+      header { display: none; }
+      body { background: #ffffff; }
+      main { max-width: none; margin: 0; padding: 0; }
+      .card { box-shadow: none; border-radius: 0; margin: 0 0 8px; }
       #competition-select,
       #competition-message,
       #division-jump-container,
       .print-btn,
-      .note {
-        display: none !important;
-      }
+      .note { display: none !important; }
     }
   </style>
 </head>
@@ -328,28 +242,19 @@
   <main>
     <div class="card">
       <h1>Live Results</h1>
-      <p class="note">
-        Select a competition to view division leaderboards. Results are updated live by the admin.
-      </p>
+      <p class="note">Select a competition to view division leaderboards. Results are updated live by the admin.</p>
 
       <label for="competition-select">Competition</label>
       <select id="competition-select">
         <option value="">Select a competition</option>
       </select>
+
       <div id="competition-message" class="message info"></div>
       <div id="competition-meta" class="comp-meta"></div>
 
-      <!-- Division quick-jump buttons -->
       <div id="division-jump-container" class="division-jump-container"></div>
 
-      <!-- Print button -->
-      <button
-        type="button"
-        id="print-btn"
-        class="print-btn"
-        disabled
-        style="display:none;"
-      >
+      <button type="button" id="print-btn" class="print-btn" disabled style="display:none;">
         Print Results
       </button>
     </div>
@@ -397,7 +302,7 @@
 
     function formatHandicap(seconds) {
       if (seconds == null || isNaN(seconds)) return "";
-      const total = Math.round(Number(seconds)); // assume stored as seconds
+      const total = Math.round(Number(seconds));
       const sign = total < 0 ? "-" : "";
       const abs = Math.abs(total);
       const m = Math.floor(abs / 60);
@@ -434,9 +339,12 @@
           if (!r || !r.discipline) return;
           const key = r.discipline;
           if (!byDisc[key]) return;
+
           byDisc[key] = {
             raw: r.raw_value || null,
-            pts: typeof r.points === "number" ? r.points : (r.points == null ? null : Number(r.points))
+            pts: (typeof r.points === "number")
+              ? r.points
+              : (r.points == null ? null : Number(r.points))
           };
         });
 
@@ -444,6 +352,9 @@
           const val = byDisc[d].pts;
           return sum + (typeof val === "number" ? val : 0);
         }, 0);
+
+        const laserPts = byDisc.laser.pts;
+        const hasLaser = typeof laserPts === "number";
 
         const first = a.first_name || "";
         const last = a.last_name || "";
@@ -458,16 +369,34 @@
           obstacle: byDisc.obstacle,
           laser: byDisc.laser,
           total,
-          handicap: e.handicap
+          handicap: e.handicap,
+          tieBreak: e.tie_break_order,
+          hasLaser
         };
       });
 
-      // Sort by Total desc, then name asc
+      // Determine whether division is in "post-laser" mode
+      // If at least one athlete has laser points, we'll treat the division as post-laser for place display.
+      const divisionHasLaser = rows.some(r => r.hasLaser);
+
+      // Sort:
+      // - Always by total desc
+      // - If totals tie AND BOTH athletes have laser points (post-laser), apply tieBreak asc (nulls last)
+      // - Finally name asc for stable ordering
       rows.sort((a, b) => {
         if (b.total !== a.total) return b.total - a.total;
+
+        if (divisionHasLaser && a.hasLaser && b.hasLaser) {
+          const aTie = (a.tieBreak == null) ? Number.POSITIVE_INFINITY : a.tieBreak;
+          const bTie = (b.tieBreak == null) ? Number.POSITIVE_INFINITY : b.tieBreak;
+          if (aTie !== bTie) return aTie - bTie;
+        }
+
         return a.name.localeCompare(b.name);
       });
 
+      // attach helper flag for rendering places
+      rows._divisionHasLaser = divisionHasLaser;
       return rows;
     }
 
@@ -486,7 +415,7 @@
         return;
       }
 
-      const buttonsHtml = divisions.map(d => {
+      divisionJumpContainer.innerHTML = divisions.map(d => {
         const label = d.name || "Division";
         return `
           <button
@@ -498,8 +427,6 @@
           </button>
         `;
       }).join("");
-
-      divisionJumpContainer.innerHTML = buttonsHtml;
     }
 
     function renderCompetitionLeaderboards(competition) {
@@ -546,6 +473,8 @@
 
       const html = divisions.map(div => {
         const rows = buildDivisionRows(div);
+        const divisionHasLaser = !!rows._divisionHasLaser;
+
         const tags = [];
         if (div.age_group) tags.push(div.age_group);
         if (div.gender) tags.push(div.gender);
@@ -564,21 +493,26 @@
           `;
         }
 
-        // Compute "Place" with ties:
-        // e.g., scores [1000,1000,1000,950] => places [1,1,1,4]
+        // Place rendering rules:
+        // - Pre-laser: ties shown as 1,1,1,4 based on total points
+        // - Post-laser: unique places (1..N) based on sorted order (tieBreak resolves close finishes)
         let lastPoints = null;
         let lastPlace = 0;
+
         const body = rows.map((r, idx) => {
           let place;
-          if (idx === 0) {
-            place = 1;
-          } else if (r.total === lastPoints) {
-            place = lastPlace;
-          } else {
+
+          if (divisionHasLaser) {
             place = idx + 1;
+          } else {
+            // tie-aware ranking: 1,1,1,4...
+            if (idx === 0) place = 1;
+            else if (r.total === lastPoints) place = lastPlace;
+            else place = idx + 1;
+
+            lastPoints = r.total;
+            lastPlace = place;
           }
-          lastPoints = r.total;
-          lastPlace = place;
 
           return `
             <tr>
@@ -618,9 +552,7 @@
                   <th>Handicap<br/><span style="font-size:0.7rem;">m:ss</span></th>
                 </tr>
               </thead>
-              <tbody>
-                ${body}
-              </tbody>
+              <tbody>${body}</tbody>
             </table>
           </div>
         `;
@@ -628,7 +560,6 @@
 
       leaderboardContainer.innerHTML = html;
 
-      // Enable and show print button
       printBtn.disabled = false;
       printBtn.style.display = "inline-block";
     }
@@ -654,6 +585,7 @@
             entries (
               id,
               handicap,
+              tie_break_order,
               athletes (
                 first_name,
                 last_name,
@@ -691,18 +623,15 @@
 
       setCompetitionMessage("");
 
-      const options = competitionsCache.map(c => `
-        <option value="${c.id}">${c.name}</option>
-      `).join("");
-
       competitionSelect.innerHTML = `
         <option value="">Select a competition</option>
-        ${options}
+        ${competitionsCache.map(c => `<option value="${c.id}">${c.name}</option>`).join("")}
       `;
     }
 
     competitionSelect.addEventListener("change", () => {
       const id = competitionSelect.value;
+
       if (!id) {
         competitionMeta.innerHTML = "";
         divisionJumpContainer.innerHTML = "";
@@ -718,12 +647,8 @@
       renderCompetitionLeaderboards(comp);
     });
 
-    // Print handler
-    printBtn.addEventListener("click", () => {
-      window.print();
-    });
+    printBtn.addEventListener("click", () => window.print());
 
-    // global for inline onclick
     function scrollToDivision(targetId) {
       const el = document.getElementById(targetId);
       if (!el) return;
@@ -737,4 +662,3 @@
   </script>
 </body>
 </html>
-
