--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNid2lmbWdyZWt1Z29samNhcW9oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ3MDcxODYsImV4cCI6MjA4MDI4MzE4Nn0.Rp5MCWYQL9SxbnBEJ7e76gbbd95qsStaLE2Hkhpn47g";
 
     const { createClient } = window.supabase;
-    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const sb = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     const currentSelect = document.getElementById("current-competition-select");
     const pastSelect = document.getElementById("past-competition-select");
@@ -710,7 +710,7 @@
     async function loadCompetitions() {
       setCompetitionMessage("Loading competitions...", "info");
 
-      const { data, error } = await supabase
+      const { data, error } = await sb
         .from("competitions")
         .select(`
           id,
